fix: Reduce width of cards on mobile

--- a/styles/Users.module.css
+++ b/styles/Users.module.css
@@ -30,21 +30,18 @@
 
 .card:nth-of-type(2) {
   /* z-index: 9; */
-  left: 0;
   bottom: 100px;
   background: #131122;
 }
 
 .card:nth-of-type(3) {
   /* z-index: 8; */
-  left: 0;
   bottom: 200px;
   background: #1a172d;
 }
 
 .card:nth-of-type(4) {
   /* z-index: 7; */
-  left: 0;
   bottom: 300px;
   box-shadow: none;
   background: #201d38;
@@ -59,21 +56,18 @@
 
   .card:nth-of-type(2) {
     /* z-index: 9; */
-    left: 0;
     bottom: 70px;
     background: #131122;
   }
 
   .card:nth-of-type(3) {
     /* z-index: 8; */
-    left: 0;
     bottom: 140px;
     background: #1a172d;
   }
 
   .card:nth-of-type(4) {
     /* z-index: 7; */
-    left: 0;
     bottom: 210px;
     box-shadow: none;
     background: #201d38;
